tests/broken/stray-else.stderr
error: Unexpected 'else' statement
 --> tests/broken/stray-else.rs:4:38
  |
4 | #[oxiplate_inline = "{{ action }}{%- else -%}"]
  |                                      ^^^^
